style.css
/* style guide */
:root {
    /* Primary colors */
    --darkBlue: hsl(233, 26%, 24%);
    --limeGreen: hsl(136, 65%, 51%);
    --brightCyan: hsl(192, 70%, 51%);
    /* Neutral colors */
    --grayishBlue: hsl(233, 8%, 62%);
    --lightGrayishBlue: hsl(220, 16%, 96%);
    --veryLightGray: hsl(0, 0%, 98%);
    --white: hsl(0, 0%, 100%);
    /* Layout */
    --mobile: 375px;
    --desktop: 1112px;
    --wrapper: 24px;
}


* {
    font-family: 'Public Sans', sans-serif !important;
}

body {
    color: var(--grayishBlue);
    background: var(--white);
}


.navbar {
    max-width: 100vw;
    background: #fff;
    position: fixed;
    z-index: 10;
    padding-bottom: 0px;
    padding-top: 0px;
    backdrop-filter: blur(10px);
    transition: ease 0.8s all;
    box-shadow: none !important;
    align-items: center;

    box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.05);
    transition: opacity 0.3s ease, box-shadow 0.3s ease;
}

.navbar-toggler {
    background: transparent;
}

.navButtons {
    /* position: absolute;
    right: 0rem; */
}

.navbar-nav {
    width: fit-content;
    margin: 0 auto;
}

button {
    background: linear-gradient(30deg, #4CAF50, #00BFFF);
    color: #fff !important;
    border-radius: 2rem !important;
    transition: 0.4s ease filter;
}

button:hover {
    /* background: linear-gradient(85deg, #4CAF50, #00BFFF); */
    filter: brightness(1.1);
}

.mw {
    max-width: 1140px;
    margin: auto;
}

.vh100 {
    height: 100vh;
}

.attribution {
    font-size: 11px;
    text-align: center;
}

.attribution a {
    color: hsl(228, 45%, 44%);
}

.primary-title {
    color: var(--darkBlue);
}

.wrapper {
    padding: 0 var(--wrapper);
    max-width: var(--desktop);
    margin: auto;
}

/* Reset some default styling */
body,
h1,
h2,
h3,
p {
    margin: 0;
    padding: 0;
}

h3 {
    font-size: 1.17em !important;
}

.high-stack {
    position: absolute;
    z-index: 2;
    top: -65px;
    right: -35px;
    height: auto;
    transform: translateX(0%);
    transition: transform 0.1s ease;
}

.low-stack {
    position: absolute;
    z-index: 1;
    right: -155px;
    top: -5px;
    height: auto;
    width: 65%;
}

article img,
svg {
    transition: 0.4s ease all;
}

article img:hover,
svg:hover {
    transform: scale(1.02);
}

.footer-links a {
    transition: 0.4s ease color;
}

.footer-links a:hover {
    color: var(--limeGreen);
}

.footer-icon svg path {
    transition: 0.4s ease all;
}

.footer-icon:hover svg path {
    fill: var(--limeGreen);
}

.nav-item {
    border-bottom: transparent solid;
    transition: 0.4s ease all;
    min-width: 4.5rem;
    text-align: center;
    padding-top: 6px;
    padding-bottom: 6px;
}

.nav-item:hover {
    border-bottom: var(--limeGreen) solid
}

.why-easybank {
    background: var(--lightGrayishBlue);
    text-align: center;
    padding-top: 4em;
    padding-bottom: 3em;
}

.why-easybank-description {
    margin-bottom: 4em;
}

.why-easybank-feature .description,
.why-easybank-feature .why-easybank-description {
    margin-bottom: 2em;
}

.why-easybank-grid {
    display: grid;
    grid-gap: 1.6em;
}

.why-easybank-feature img {
    margin-bottom: 1.5em;
}

.title-tertiary {
    transition: 0.4s ease all;
}

.title-tertiary:hover {
    cursor: pointer;
    color: var(--limeGreen);
}


@media screen and (min-width: 768px) {
    .why-easybank {
        padding-top: 5em;
        text-align: left;
    }

    .why-easybank-description {
        max-width: 90%;
        font-size: 1em;
    }

    .why-easybank-grid {
        grid-template-columns: repeat(2, 1fr);
    }
}

@media screen and (min-width: 1024px) {
    .why-easybank-description {
        max-width: 65%;
    }

    .why-easybank-grid {
        grid-template-columns: repeat(3, 1fr);
    }
}

@media screen and (min-width: 1280px) {
    .why-easybank-description {
        max-width: 60%;
    }

    .why-easybank-grid {
        grid-template-columns: repeat(4, 1fr);
    }
}

.latest-articles {
    background: var(--veryLightGray);
    padding-top: 4.5em;
    padding-bottom: 4em;
}

.latest-articles .title-primary {
    text-align: center;
    margin-bottom: 1em;
    font-size: 1.8em;
}

.latest-articles-grid {
    display: grid;
    grid-gap: 1.6em;
}

.latest-articles-item {
    background: var(--white);
    border-radius: 0.5em;
    overflow: hidden;
    box-shadow: 0 0.75rem 1.5rem rgba(18, 38, 63, 0.03);
}

.latest-articles-item img {
    width: 100%;
    object-fit: cover;
}

.latest-articles-item-content {
    padding: 1em 1.8em;
}

.latest-articles-item-autor {
    font-size: 0.7em;
    margin-bottom: 1em;
    display: block;
}

.latest-articles-item-description {
    font-size: 0.7em;
    margin-top: 1em;
    margin-bottom: 1.5em;
}

@media screen and (min-width: 768px) {
    .latest-articles .title-primary {
        text-align: left;
    }

    .latest-articles-item-content {
        padding: 1em 1.4em;
    }

    .latest-articles-grid {
        grid-template-columns: repeat(2, 1fr);
    }
}

@media screen and (min-width: 1024px) {
    .latest-articles-grid {
        grid-template-columns: repeat(3, 1fr);
    }
}

@media screen and (min-width: 1280px) {
    .latest-articles-grid {
        grid-template-columns: repeat(4, 1fr);
    }
}

@media (orientation: portrait) {
    .high-stack {
        top: -78px;
        right: 0px;
    }

    .low-stack {
        position: absolute;
        z-index: 1;
        right: 0px;
        top: -5px;
        height: auto;
        width: auto;
    }

    .nav-item {
        padding-top: 0px;
        padding-bottom: 0px;
    }

    .navButtons button {
        margin-bottom: 6px;
        width: 100%;
    }

    .navbar {
        padding-bottom: 10px;
        padding-top: 10px;
    }
}

/* footer */
.footer {
    background: var(--darkBlue);
    text-align: center;
    padding: 2.3em 0;
}

.footer-grid {
    display: grid;
    grid-column-gap: 5em;
}

.footer-logo {
    display: block;
    margin-bottom: 1.5em;
}

.footer-social {
    display: grid;
    grid-template-columns: repeat(5, 20px);
    grid-column-gap: 1.2em;
    justify-content: center;
    margin-bottom: 2em;
}

.footer-icon {
    width: 25px;
    height: 25px;
    display: inline-flex;
    transition: 0.4s ease all;
}

.footer-icon:hover {
    fill: var(--limeGreen);
    filter: brightness(1.2);
}

.footer-link {
    display: block;
    color: var(--lightGrayishBlue);
    font-size: 0.9em;
    font-weight: 400;
    text-decoration: none;
    margin-bottom: 0.6em;
}

.footer-link:last-of-type {
    margin-bottom: 2em;
}

.footer-copyright {
    font-size: 0.8em;
    margin-top: 1.5em;
    margin-bottom: 0;
}

@media screen and (min-width: 1024px) {
    .footer {
        padding-top: 3em;
    }

    .footer-link {
        margin-bottom: 0.8em;
    }

    .footer-link:last-of-type {
        margin-bottom: 0;
    }

    .footer-grid {
        grid-template-columns: 200px 1fr 220px;
        grid-template-areas: "logo links button " "social links copyright";
    }

    .footer-logo {
        grid-area: logo;
        text-align: left;
    }

    .footer-social {
        grid-area: social;
        justify-content: start;
        align-content: center;
        margin-bottom: 0;
    }

    .footer-icon {
        width: 20px;
        height: 20px;
    }

    .footer-links {
        grid-area: links;
        display: grid;
        grid-template-rows: repeat(3, 1fr);
        grid-template-columns: 160px 180px;
        grid-auto-flow: column;
        justify-items: start;
    }

    .footer-button {
        grid-area: button;
        text-align: right;
    }

    .footer-copyright {
        grid-area: copyright;
        text-align: right;
        margin-top: 1em;
    }
}

